@@ -718,6 +718,9 @@ grub_dl_load (const char *name)
   if (mod)
     return mod;
 
+  if (grub_no_modules)
+    return 0;
+
   if (! grub_dl_dir) {
     grub_error (GRUB_ERR_FILE_NOT_FOUND, N_("variable `%s' isn't set"), "prefix");
     return 0;
