@@ -44,10 +44,8 @@
 extern int verbosity;
 extern const char *program_name;
 
-void grub_emu_init (void);
 void grub_init_all (void);
 void grub_fini_all (void);
-void grub_emu_post_init (void);
 
 void grub_find_zpool_from_dir (const char *dir,
 			       char **poolname, char **poolfs);
