@@ -1,5 +1,9 @@
 2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Make 'make check' work on emu.
+
+2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Replace libcurses with our own vt100 handling for the ease of testing
 	and decreasing prerequisites.
 
